--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@exlibris/exl-cloudapp-angular-lib": "^2.0.2",
     "@exlibris/exl-cloudapp-base": "^2.0.2",
     "@ngx-translate/core": "16.0.4",
+    "@primeng/themes": "^18.0.2-patch.1",
     "lodash": "4.17.21",
     "loglevel": "1.9.2",
+    "primeng": "^18.0.2-patch.1",
     "rxjs": "7.8.2",
     "strongly-typed-events": "3.0.11",
     "tslib": "2.8.1",
@@ -42,8 +44,8 @@
     "@vendure/ngx-translate-extract": "9.3.1",
     "jasmine-core": "5.2.0",
     "karma": "6.4.4",
-    "karma-coverage": "2.2.1",
     "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "postcss": "8.4.49",
