Add better error handling for undefined apiUrl

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-   "id": "duke-dsc",
+   "id": "duke-libraries/dsc-alma-cloudapp",
    "title": "Duke Data Service Center",
    "subtitle": "Duke University Libraries access to Data Service Center",
    "author": "Jeff Fleming",
